# django-keycloak

./: .travis.yml  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
docs/: conf.py  index.rst
src/django_keycloak/: urls.py
src/django_keycloak/services/: oidc_profile.py
